kubernetes/apps/base/acquisitions/radarr-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: acquisition
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: ""
      kind: Rule
      services:
        - name: radarr-xarr
          port: 7878
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-media
          namespace: traefik
  tls:
    secretName: radarr-tls
