kubernetes/apps/base/acquisitions/sabnzbd-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: acquisition
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: ""
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-media
          namespace: traefik
