kubernetes/apps/base/acquisitions/sonarr-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: acquisition
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: ""
      kind: Rule
      services:
        - name: sonarr-xarr
          port: 8989
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-media
          namespace: traefik
  tls:
    secretName: sonarr-tls
